--- a/sites/configurations/scvo/templates/pages/page-digital-evolution-senior-leaders.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital-evolution-senior-leaders.hbs
@@ -4,58 +4,70 @@
     {{> breadcrumbs}}
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
           {{{@root.data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone content sidebar-content">
+
           <h2 class="blogs">Testimonials</h2>
-          <div class="mdc-card" style="margin-bottom:1rem;">
-            <section class="mdc-card__primary mdc-theme--primary-bg">
-              <h1 class="mdc-card__title mdc-card__title--large">
-                <a href="/digital/evolution/senior-leaders/craig-wilson-of-big-hearts-on-the-slp/" class="mdc-theme--on-primary">Craig Wilson</a>
-              </h1>
-            </section>
-            <section class="mdc-card__media">
-              <a href="/digital/evolution/senior-leaders/craig-wilson-of-big-hearts-on-the-slp/">
-                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/big-hearts.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
-              </a>
-            </section>
-          </div>
-          <div class="mdc-card" style="margin-bottom:1rem;">
-            <section class="mdc-card__primary mdc-theme--primary-bg">
-              <h1 class="mdc-card__title mdc-card__title--large">
-                <a href="/digital/evolution/senior-leaders/biddy-kelly-of-fresh-start-on-the-slp/" class="mdc-theme--on-primary">Biddy Kelly</a>
-              </h1>
-            </section>
-            <section class="mdc-card__media" style="background-color:#005EA6;">
-              <a href="/digital/evolution/senior-leaders/biddy-kelly-of-fresh-start-on-the-slp/">
-                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/fresh-start.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
-              </a>
-            </section>
-          </div>
-          <div class="mdc-card" style="margin-bottom:1rem;">
-            <section class="mdc-card__primary mdc-theme--primary-bg">
-              <h1 class="mdc-card__title mdc-card__title--large">
-                <a href="/digital/evolution/senior-leaders/jane-griffin-of-lgbt-youth-scotland-on-the-slp/" class="mdc-theme--on-primary">Jane Griffin</a>
-              </h1>
-            </section>
-            <section class="mdc-card__media">
-              <a href="/digital/evolution/senior-leaders/jane-griffin-of-lgbt-youth-scotland-on-the-slp/">
-                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/lgbtys.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
-              </a>
-            </section>
-          </div>
-          <div class="mdc-card">
-            <section class="mdc-card__primary mdc-theme--primary-bg">
-              <h1 class="mdc-card__title mdc-card__title--large">
-                <a href="/digital/evolution/senior-leaders/justina-murray-of-scottish-families-affected-by-alcohol-and-drugs-on-the-slp/" class="mdc-theme--on-primary">Justina Murray</a>
-              </h1>
-            </section>
-            <section class="mdc-card__media">
-              <a href="/digital/evolution/senior-leaders/justina-murray-of-scottish-families-affected-by-alcohol-and-drugs-on-the-slp/">
-                <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/sfad.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
-              </a>
-            </section>
+
+          <div class="mdc-layout-grid equal-height">
+            <div class="mdc-layout-grid__inner">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+                <div class="mdc-card">
+                  <section class="mdc-card__primary mdc-theme--primary-bg">
+                    <h1 class="mdc-card__title mdc-card__title--large">
+                      <a href="/digital/evolution/senior-leaders/craig-wilson-of-big-hearts-on-the-slp/" class="mdc-theme--on-primary">Craig Wilson</a>
+                    </h1>
+                  </section>
+                  <section class="mdc-card__media">
+                    <a href="/digital/evolution/senior-leaders/craig-wilson-of-big-hearts-on-the-slp/">
+                      <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/big-hearts.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
+                    </a>
+                  </section>
+                </div>
+              </div>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+                <div class="mdc-card">
+                  <section class="mdc-card__primary mdc-theme--primary-bg">
+                    <h1 class="mdc-card__title mdc-card__title--large">
+                      <a href="/digital/evolution/senior-leaders/biddy-kelly-of-fresh-start-on-the-slp/" class="mdc-theme--on-primary">Biddy Kelly</a>
+                    </h1>
+                  </section>
+                  <section class="mdc-card__media" style="background-color:#005EA6;flex:1">
+                    <a href="/digital/evolution/senior-leaders/biddy-kelly-of-fresh-start-on-the-slp/">
+                      <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/fresh-start.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
+                    </a>
+                  </section>
+                </div>
+              </div>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+                <div class="mdc-card">
+                  <section class="mdc-card__primary mdc-theme--primary-bg">
+                    <h1 class="mdc-card__title mdc-card__title--large">
+                      <a href="/digital/evolution/senior-leaders/jane-griffin-of-lgbt-youth-scotland-on-the-slp/" class="mdc-theme--on-primary">Jane Griffin</a>
+                    </h1>
+                  </section>
+                  <section class="mdc-card__media">
+                    <a href="/digital/evolution/senior-leaders/jane-griffin-of-lgbt-youth-scotland-on-the-slp/">
+                      <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/lgbtys.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
+                    </a>
+                  </section>
+                </div>
+              </div>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+                <div class="mdc-card">
+                  <section class="mdc-card__primary mdc-theme--primary-bg">
+                    <h1 class="mdc-card__title mdc-card__title--large">
+                      <a href="/digital/evolution/senior-leaders/justina-murray-of-scottish-families-affected-by-alcohol-and-drugs-on-the-slp/" class="mdc-theme--on-primary">Justina Murray</a>
+                    </h1>
+                  </section>
+                  <section class="mdc-card__media">
+                    <a href="/digital/evolution/senior-leaders/justina-murray-of-scottish-families-affected-by-alcohol-and-drugs-on-the-slp/">
+                      <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/sfad.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
+                    </a>
+                  </section>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
