--- a/sites/configurations/getinvolved/templates/opportunities/opportunity.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/opportunity.hbs
@@ -26,7 +26,7 @@
 
   {{else}}
   <p>
-    <strong>Error:</strong> the requested job could not be found - it may have expired.
+    <strong>Error:</strong> the requested opportunity could not be found - it may have expired.
   </p>
   {{/compare}}
 </div>
