mid work on opportunities, committing because system dangerous atm

--- a/sites/configurations/getinvolved/partials/opportunity/full.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/full.hbs
@@ -17,12 +17,6 @@
               Advertised from {{momentFormat (moment available_from "x") "Do MMMM YYYY"}}
             </li>
             {{/if ~}}
-            {{#if milo_ref ~}}
-            <li class="mdc-card__info--opportunity-reference mdc-typography--body1">
-              <span class="fa-li"><span class="far fa-hashtag fa-fw" title="Reference"></span></span>
-              {{milo_ref}}
-            </li>
-            {{/if ~}}
           </ul>
         </div>
         <div class="detailed-info">
@@ -40,12 +34,11 @@
           </div>
           {{/if ~}}
 
-          <!--{{#if organisation_aims_and_objectives ~}}-->
-            <!--<h4 class="mdc-typography--headline6">Availability</h4>-->
-            <!--<div class="mdc-typography--body1">-->
-              <!--&lt;!&ndash;{{>opportunity_timings_display}}&ndash;&gt;-->
-            <!--</div>-->
-          <!--{{/if ~}}-->
+
+            <h4 class="mdc-typography--headline6">Availability</h4>
+            <div class="mdc-typography--body1">
+              <!--{{>opportunity_timings_display}}-->
+            </div>
 
 
 
