--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2266,6 +2266,17 @@ body.the-gathering:not(.post) {
 body.the-gathering:not(.post) .full {
   width: 60%;
 }
+body.the-gathering-2019 {
+  #gathering-menu {
+    .mdc-button:first-child {
+      content: "Home";
+    }
+    .menu-level-2 {
+      padding-left: $unit;
+    }
+  }
+}
+
 body.datawareness:not(.post),
 body.i-love-charity:not(.post),
 body.right-approach:not(.post),
