--- a/sites/configurations/scvo/templates/pages/page-gathering-2019.hbs
+++ b/sites/configurations/scvo/templates/pages/page-gathering-2019.hbs
@@ -1,7 +1,7 @@
 <div class="page">
   {{> header_splash_gathering}}
   <div class="container-fluid">
-    {{> breadcrumbs}}
+    <!-- {{> breadcrumbs}} -->
 
     <div class="upper-nav page-upper-nav">
       {{> menu_gathering}}
