--- a/sites/configurations/getinvolved/layouts/default.hbs
+++ b/sites/configurations/getinvolved/layouts/default.hbs
@@ -40,7 +40,7 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
   <!-- <link type="text/css" rel="stylesheet" href="/assets/css/getinvolved-styles.css"> -->
   {{#compare request.url.hostname "getinvolved.local"}}
-    <link type="text/css" rel="stylesheet" href="/assets/goodmoves/main.css">
+    <link type="text/css" rel="stylesheet" href="/assets/getinvolved/main.css">
   {{else}}
     <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/scvo-frontend/getinvolved/main.css">
   {{/compare}}
