--- a/sites/configurations/getinvolved/templates/home.hbs
+++ b/sites/configurations/getinvolved/templates/home.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid home-banner">
-  <div class="banner-search overlay" style="background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/goodmoves-header-sdgs-1.jpg');">
+  <div class="banner-search overlay" style="background-image: url('');">
     <div class="content page-content">
       <div class="overlay-content">
         <div class="mdc-layout-grid">
