--- a/sites/configurations/scvo/templates/errors/404.hbs
+++ b/sites/configurations/scvo/templates/errors/404.hbs
@@ -7,7 +7,7 @@
             <span class="header-text-banner">
               Error 404: The requested page could not be found
               <span class="mdc-typography--caption">
-                We recently relaunched our website - some pages have moved
+                Some pages may have been moved or deleted
               </span>
             </span>
           </h1>
