--- a/sites/configurations/scvo/templates/pages/page-digital.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital.hbs
@@ -97,6 +97,26 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
             <div class="mdc-card">
               <section class="mdc-card__primary">
+                <h3>Get support</h3>
+              </section>
+              <section class="mdc-card__supporting-text">
+                <p>
+                  Find out more about the support we can offer to help build the skills and
+                  confidence of your workforce and people you work with.
+                </p>
+              </section>
+              <section class="mdc-card__actions">
+                <ul>
+                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/champions">Digital Champion Training</a></li>
+                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/skills/scotlands-essential-digital-skills-toolkit">Toolkit</a></li>
+                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/charter-fund/projects">View projects</a></li>
+                </ul>
+              </section>
+            </div>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <div class="mdc-card">
+              <section class="mdc-card__primary">
                 <h3>Get involved</h3>
               </section>
               <section class="mdc-card__supporting-text">
@@ -110,26 +130,6 @@
                   <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://digitalparticipation.scot/sign-up">Sign the Charter</a></li>
                   <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://digitalparticipation.scot/signatories">View signatories</a></li>
                   <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://digitalparticipation.scot/resources">Find resources</a></li>
-                </ul>
-              </section>
-            </div>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            <div class="mdc-card">
-              <section class="mdc-card__primary">
-                <h3>Get support</h3>
-              </section>
-              <section class="mdc-card__supporting-text">
-                <p>
-                  Find out more about the support we can offer to help build the skills and
-                  confidence of your workforce and people you work with.
-                </p>
-              </section>
-              <section class="mdc-card__actions">
-                <ul>
-                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/champions">Digital Champion Training</a></li>
-                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/charter-fund">Apply for funding</a></li>
-                  <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/charter-fund/projects">View projects</a></li>
                 </ul>
               </section>
             </div>
