--- a/sites/configurations/scvo/partials/footer-gathering.hbs
+++ b/sites/configurations/scvo/partials/footer-gathering.hbs
@@ -1,4 +1,4 @@
-<div class="footer-image join-our-hub sponsors">
+<div class="footer-text sponsors">
   <div class="container-fluid">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
