--- a/sites/configurations/scvo/templates/errors/500.hbs
+++ b/sites/configurations/scvo/templates/errors/500.hbs
@@ -3,18 +3,17 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-          <h2>Something went terribly wrong</h2>
+          <h2>Error 5xx: Something went terribly wrong</h2>
           <p>
-            Looks like either:
+            It looks like either:
           </p>
           <ul>
-            <li>the server did not understand what you were trying to do and panicked,</li>
-            <li>the devs did something stupid, or</li>
+            <li>the server did not understand what you were trying to access and panicked,</li>
+            <li>the developers overlooked something obvious, or</li>
             <li>a combination of the two</li>
           </ul>
           <p>
-            What ever the cause of this issue, the devs have been informed and will
-            be working to fix whatever can be fixed
+            Whatever the cause, the developers have been informed and will be working on a fix.
           </p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
