--- a/sites/configurations/scvo/templates/pages/page-gathering-2019.hbs
+++ b/sites/configurations/scvo/templates/pages/page-gathering-2019.hbs
@@ -1,11 +1,11 @@
 <div class="page">
   {{> header_splash_gathering}}
   <div class="container-fluid">
-    <!-- {{> breadcrumbs}} -->
-
     <div class="upper-nav page-upper-nav">
       {{> menu_gathering}}
     </div>
+
+    <!-- {{> breadcrumbs}} -->
 
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
@@ -13,7 +13,7 @@
           {{{@root.data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
-          Navigation menu TBC
+          <!-- Navigation menu TBC -->
         </div>
       </div>
     </div>
