--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2232,9 +2232,9 @@ body.the-gathering:not(.post) {
   .full {
     margin-left: auto;
     margin-right: auto;
-    .mdc-button {
-      width: 100%;
-    }
+    // .mdc-button {
+    //   width: 100%;
+    // }
     .gallery-caption {
       font-weight: 600;
       margin-bottom: $unit;
@@ -2266,6 +2266,9 @@ body.the-gathering:not(.post) .full {
   width: 60%;
 }
 body.the-gathering-2019 {
+  .dark-menu {
+    background: black;
+  }
   #gathering-menu {
     box-shadow: none;
     margin: -($unit/2) 0 0;
@@ -2277,6 +2280,7 @@ body.the-gathering-2019 {
       display: table-cell;
       border-radius: 0;
       text-align: center;
+      color: rgba(255, 255, 255, 0.8);
     }
     .mdc-button:first-child {
       content: "Home";
