Gathering table formatting

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2289,6 +2289,13 @@ body.the-gathering-2019 {
       padding-left: $unit;
     }
   }
+  .wp-block-table {
+    border-collapse: collapse;
+    td {
+      border: 1px solid rgba(0, 0, 0, 0.5);
+      padding: $unit/10 $unit/4;
+    }
+  }
 }
 
 body.datawareness:not(.post),
