Added GA to file downloads

--- a/sites/configurations/goodmoves/templates/account/settings-foot.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings-foot.hbs
@@ -102,7 +102,7 @@
           'opacity': enabled ? 1 : 0.5,
           'cursor': enabled ? 'pointer' : 'default'
         })
-        .attr('title', !enabled ? 'You must have at least one account linked to your Goodmoves account' : '');
+        .attr('title', !enabled ? 'You cannot unlink your social account as you are using it to sign in' : '');
     }
   
     $changePassword.on('click', changePassword);
