--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -1,5 +1,5 @@
 <div class="mdc-card goodmoves-vacancy full{{if top_job " top-job"}}" data-vacancy-id="{{Id}}">
-  {{> vacancy_key_info}}
+  {{> vacancy_key_info view="full"}}
   <hr class="mdc-list-divider" />
   <div class="vacancy-info-container">
     {{#>components_tab_bar id="vacancy-tab-bar" defaultTabIdentifier="tab"}}
