--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -3973,6 +3973,11 @@ footer {
       }
     }
   }
+  body.the-gathering-2019 #gathering-menu {
+    .mdc-button {
+      display: table-header-group;
+    }
+  }
   .splash-image h1.header-text .photo-wee,
   .gist .thumbnail img,
   .gist img.photo-wee {
