--- a/sites/configurations/scvo/partials/footer-gathering.hbs
+++ b/sites/configurations/scvo/partials/footer-gathering.hbs
@@ -14,7 +14,7 @@
             Our sponsors
           </h3>
           <p>
-            <a href="/the-gathering-2019/sponsorship"><img src="http://cms.scvo.org/wp-content/uploads/2018/09/G2018-CM-sponsor-buttons.png" /></a>
+            <a href="/the-gathering-2019/sponsorship"><img src="http://cms.scvo.org/wp-content/uploads/2018/09/G2018-CM-sponsor-buttons.png" class="responsive" /></a>
           </p>
           <br />
         </div>
